--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,22 +31,6 @@ services:
     labels:
       org.label-schema.group: "monitoring"
 
-  alertmanager:
-    image: prom/alertmanager:v0.21.0
-    container_name: alertmanager
-    volumes:
-      - ./alertmanager:/etc/alertmanager
-    command:
-      - '--config.file=/etc/alertmanager/config.yml'
-      - '--storage.path=/alertmanager'
-    restart: unless-stopped
-    expose:
-      - 9093
-    networks:
-      - monitor-net
-    labels:
-      org.label-schema.group: "monitoring"
-
   nodeexporter:
     image: prom/node-exporter:v1.0.1
     container_name: nodeexporter
@@ -67,23 +51,6 @@ services:
     labels:
       org.label-schema.group: "monitoring"
 
-  cadvisor:
-    image: gcr.io/cadvisor/cadvisor:v0.37.0
-    container_name: cadvisor
-    volumes:
-      - /:/rootfs:ro
-      - /var/run:/var/run:rw
-      - /sys:/sys:ro
-      - /var/lib/docker:/var/lib/docker:ro
-      #- /cgroup:/cgroup:ro #doesn't work on MacOS only for Linux
-    restart: unless-stopped
-    expose:
-      - 8080
-    networks:
-      - monitor-net
-    labels:
-      org.label-schema.group: "monitoring"
-
   grafana:
     image: grafana/grafana:7.1.1
     container_name: grafana
@@ -94,9 +61,10 @@ services:
       - GF_SECURITY_ADMIN_USER=${ADMIN_USER:-admin}
       - GF_SECURITY_ADMIN_PASSWORD=${ADMIN_PASSWORD:-admin}
       - GF_USERS_ALLOW_SIGN_UP=false
+      - GF_SERVER_HTTP_PORT=9099
     restart: unless-stopped
     expose:
-      - 3000
+      - 9099
     networks:
       - monitor-net
     labels:
@@ -117,9 +85,8 @@ services:
     image: stefanprodan/caddy
     container_name: caddy
     ports:
-      - "3000:3000"
+      - "9099:9099"
       - "9090:9090"
-      - "9093:9093"
       - "9091:9091"
     volumes:
       - ./caddy:/etc/caddy
