add scrape config for kawa GraphQL

--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -25,6 +25,12 @@ scrape_configs:
     static_configs:
       - targets: ['pushgateway:9091']
 
+  - job_name: 'nodejs'
+    scrape_interval: 10s
+    honor_labels: true
+    static_configs:
+      - targets: ['host.docker.internal:9991']
+
 
 #  - job_name: 'nginx'
 #    scrape_interval: 10s
