--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -27,17 +27,5 @@ scrape_configs:
 
   - job_name: 'nodejs'
     scrape_interval: 10s
-    honor_labels: true
     static_configs:
-      - targets: ['host.docker.internal:9991']
-
-
-#  - job_name: 'nginx'
-#    scrape_interval: 10s
-#    static_configs:
-#      - targets: ['nginxexporter:9113']
-
-#  - job_name: 'aspnetcore'
-#    scrape_interval: 10s
-#    static_configs:
-#      - targets: ['eventlog-proxy:5000', 'eventlog:5000']
+      - targets: ['dockerhost:9991', 'host.docker.internal:9991']
