--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
     networks:
       - monitor-net
     extra_hosts:
-      - "dockerhost:${DOCKER_HOST:-172.17.0.1}"
+      - "hostip:${HOST_IP:-172.17.0.1}"
     labels:
       org.label-schema.group: "monitoring"
 
