--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -28,4 +28,4 @@ scrape_configs:
   - job_name: 'nodejs'
     scrape_interval: 10s
     static_configs:
-      - targets: ['dockerhost:9991', 'host.docker.internal:9991']
+      - targets: ['hostip:9991', 'host.docker.internal:9991']
